# Rider1

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib.h
app/src/main/java/com/example/rider/: CameraService.java  ContactActivity.java  DriveActivity.java  MainActivity.java  MenuActivity.java  SettingActivity.java  driving.java  face.java  ready.java  setting_sound.java  warning.java
app/src/main/res/drawable/: fragment_setsound.xml  square.xml
app/src/main/res/layout/: activity_contact.xml  activity_drive.xml  activity_main.xml  activity_menu.xml  activity_setting.xml  driving.xml  face.xml  fragment_driving.xml  fragment_face.xml  fragment_ready.xml  fragment_setting_sound.xml  fragment_warning.xml  ready.xml  warning.xml
app/src/main/res/mipmap-anydpi-v26/: logo_color.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
opencv/libcxx_helper/: CMakeLists.txt
